FIX: Upload company logo local and vercel storage

--- a/src/resources/invoice/invoice.min.hbs
+++ b/src/resources/invoice/invoice.min.hbs
@@ -5,7 +5,7 @@
       format('truetype');font-weight:400;font-style:normal}@font-face{font-family:Calibri;src:url(../fonts/calibri-italic.ttf)
       format('truetype');font-weight:400;font-style:italic}@font-face{font-family:Calibri;src:url(../fonts/calibri-bold.ttf)
       format('truetype');font-weight:700;font-style:normal}@font-face{font-family:Calibri;src:url(../fonts/calibri-bold.ttf)
-      format('truetype');font-weight:700;font-style:italic}*{padding:0;margin:0;box-sizing:border-box;font-family:Calibri,sans-serif}.flex{display:flex}.flex-col{flex-direction:column}.flex-row{flex-direction:row}.flex-1{flex:1}.justify-between{justify-content:space-between}.justify-center{justify-content:center}.items-center{align-items:center}.items-start{align-items:start}.font-bold{font-weight:700}.font-normal{font-weight:400}.font-8{font-size:8pt}.font-9{font-size:9pt}.font-10{font-size:10pt}.font-11{font-size:11pt}.font-14{font-size:14pt}.font-16{font-size:16pt}.uppercase{text-transform:uppercase}.max-w-200{max-width:250px}.mt-16{margin-top:16px}.mt-64{margin-top:64px}.w-full{width:100%}.w-1{width:1%}.w-250{width:250px}.min-w-250{min-width:250px}.gap-20{gap:40px}.gap-12{gap:12px}.nowrap{white-space:nowrap}.text-left{text-align:left}.text-right{text-align:right}.text-center{text-align:center}.px-4{padding-left:4px;padding-right:4px}.px-12{padding-left:12px;padding-right:12px}.pr-4{padding-right:4px}.pr-12{padding-right:12px}.pl-12{padding-left:12px}.h-separator{border-bottom:2px
+      format('truetype');font-weight:700;font-style:italic}*{padding:0;margin:0;box-sizing:border-box;font-family:Calibri,sans-serif}.flex{display:flex}.flex-col{flex-direction:column}.flex-row{flex-direction:row}.flex-1{flex:1}.justify-between{justify-content:space-between}.justify-center{justify-content:center}.items-center{align-items:center}.items-start{align-items:start}.font-bold{font-weight:700}.font-normal{font-weight:400}.font-8{font-size:8pt}.font-9{font-size:9pt}.font-10{font-size:10pt}.font-11{font-size:11pt}.font-14{font-size:14pt}.font-16{font-size:16pt}.uppercase{text-transform:uppercase}.max-w-200{max-width:250px}.mt-10{margin-top:10px}.mt-16{margin-top:16px}.mt-64{margin-top:64px}.w-full{width:100%}.w-1{width:1%}.w-250{width:250px}.min-w-250{min-width:250px}.gap-20{gap:40px}.gap-12{gap:12px}.nowrap{white-space:nowrap}.text-left{text-align:left}.text-right{text-align:right}.text-center{text-align:center}.px-4{padding-left:4px;padding-right:4px}.px-12{padding-left:12px;padding-right:12px}.pr-4{padding-right:4px}.pr-12{padding-right:12px}.pl-12{padding-left:12px}.h-separator{border-bottom:2px
       gray solid}.border-b{border-bottom:1px #00000070 solid}.border-t{border-top:1px #00000070
       solid}.border-2{border-width:2px}.border-black{border-color:#000}table{border:0 solid
       gray;border-collapse:collapse;font-size:10pt}td{border:none}th{border:none}.page-break{page-break-after:always}.main{display:flex;flex:1;flex-direction:column;justify-content:space-between;padding-top:32px;padding-right:32px;padding-left:32px;padding-bottom:8px;height:100vh}.logo{height:60px}.header-top{border-bottom:4px
@@ -17,7 +17,7 @@
                 alt=''
                 class='logo'
                 src={{@root.logo_url}}
-              /></div><div class='header-top mt-16'><div
+              /></div><div class='header-top mt-10'><div
                 class='flex items-start justify-between'
               ><div class='flex flex-col'>{{#if @root.company.name}}<span
                       class='font-12 font-bold uppercase'
